--- a/frontFarm/src/app/pages/ventas/ventas.component.html
+++ b/frontFarm/src/app/pages/ventas/ventas.component.html
@@ -39,7 +39,8 @@
       <input type="text" [(ngModel)]="telefonoCliente" (input)="buscarCliente()" [disabled]="carrito.length > 0"
         class="form-control pe-5" />
       <button *ngIf="telefonoCliente" type="button" [disabled]="carrito.length > 0" (click)="limpiarCliente()"
-        matTooltip="Limpiar cliente" class="btn btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico">
+        matTooltip="Limpiar cliente"
+        class="btn btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico">
         <fa-icon [icon]="faTimes"></fa-icon>
       </button>
     </div>
@@ -174,16 +175,29 @@
 
       </div>
 
-      <button (click)="cerrarModalConsultaPrecio()" class="btn-rojo-tache" matTooltip="Salir de consultar precio">Cerrar</button>
+      <button (click)="cerrarModalConsultaPrecio()" class="btn-rojo-tache"
+        matTooltip="Salir de consultar">Cerrar</button>
     </div>
   </div>
 
   <table class="tabla">
+    <colgroup>
+      <col class="col-acciones">
+      <col class="col-img">
+      <col class="col-producto"><!-- se expande -->
+      <col class="col-cant">
+      <col class="col-precio">
+      <col class="col-imp-normal">
+      <col class="col-promo">
+      <col class="col-desc-porc">
+      <col class="col-monedero">
+      <col class="col-desc">
+      <col class="col-precio-final">
+    </colgroup>
+
     <thead>
       <tr>
-        <th></th>
-        <th></th>
-        <th></th>
+        <th class="col-acciones">Acc.</th>
         <th class="col-img">Imagen</th>
         <th>Producto</th>
         <th>Cant.</th>
@@ -191,34 +205,34 @@
         <th>Imp. normal</th>
         <th>Promo</th>
         <th>% desc.</th>
-        <th>Monedero</th>
+        <th>Moned.</th>
         <th>Desc.</th>
         <th>Precio Final</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let p of carrito; let i = index">
-        <td>
-          <button [disabled]="p.esGratis" [class.deshabilitado]="p.esGratis" matTooltip="Eliminar renglón"
-            class="btn-icono btn-rojo-tache" (click)="eliminarProducto(i)">
-            <i class="fas fa-times"></i>
-          </button>
-        </td>
-        <td>
-          <button [disabled]="p.esGratis" [class.deshabilitado]="p.esGratis" matTooltip="Aumentar uno"
-            class="btn-icono btn-verde" (click)="incrementarCantidad(i)">
-            <i class="fas fa-plus"></i>
-          </button>
-        </td>
-        <td>
-          <button [disabled]="p.esGratis" [class.deshabilitado]="p.esGratis" matTooltip="Quitar uno"
-            class="btn-icono btn-gris" (click)="decrementarCantidad(i)">
-            <i class="fas fa-minus"></i>
-          </button>
+        <td class="col-acciones">
+          <div class="acciones-group" role="group" aria-label="Acciones">
+            <button [disabled]="p.esGratis" [class.deshabilitado]="p.esGratis" matTooltip="Eliminar renglón"
+              class="btn-icono btn-rojo-tache" (click)="eliminarProducto(i)">
+              <i class="fas fa-times"></i>
+            </button>
+
+            <button [disabled]="p.esGratis" [class.deshabilitado]="p.esGratis" matTooltip="Aumentar uno"
+              class="btn-icono btn-verde" (click)="incrementarCantidad(i)">
+              <i class="fas fa-plus"></i>
+            </button>
+
+            <button [disabled]="p.esGratis" [class.deshabilitado]="p.esGratis" matTooltip="Quitar uno"
+              class="btn-icono btn-gris" (click)="decrementarCantidad(i)">
+              <i class="fas fa-minus"></i>
+            </button>
+          </div>
         </td>
         <td class="col-img">
           <div class="img-cell">
-            <button type="button" class="img-button" (click)="openPreviewVenta(p)" matTooltip="Ver imagen">
+            <button type="button" class="img-button" (click)="openPreviewVenta(p)" title="Ver imagen">
               <img [src]="thumbs[p.producto] || placeholderSrc" (error)="onThumbError($event, p)" alt="" loading="lazy"
                 decoding="async" />
               <span class="zoom-corner"><i class="fas fa-search-plus"></i></span>
