--- a/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
+++ b/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
@@ -23,9 +23,11 @@
                 <label>INAPAM:</label>
                 <input type="checkbox" formControlName="descuentoINAPAM">
                 <label>Costo:</label>
-                <input type="number" formControlName="costo" style="width: 5rem;" step="0.1">
+                <input type="number" formControlName="costo" style="width: 4rem;" step="0.1">
                 <label>Precio:</label>
-                <input type="number" formControlName="precio" style="width: 5rem;" step="0.1">
+                <input type="number" formControlName="precio" style="width: 4rem;" step="0.1">
+                <label>Ubicación</label>
+                <input type="text" formControlName="ubicacion" style="width: 15rem;">
             </div>
             <!-- Lotes -->
             <div formArrayName="lotes">
